Responsive Navbar, Create/Edit Dialog, Bug Fixes
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/js/filter/view.html
+++ b/app/assets/js/filter/view.html
@@ -3,7 +3,7 @@
   <span class="glyphicon glyphicon-star"></span>
 </label>
 <label class="btn btn-default" ng-model="filterModel.retail" tooltip-placement="bottom" tooltip="Retail" btn-checkbox>
-  <span class="glyphicon glyphicon-cart"></span>
+  <span class="glyphicon glyphicon-shopping-cart"></span>
 </label>
 <label class="btn btn-default" ng-model="filterModel.restaurant" tooltip-placement="bottom" tooltip="Restaurants" btn-checkbox>
   <span class="glyphicon glyphicon-cutlery"></span>
@@ -15,6 +15,6 @@
   <span class="glyphicon glyphicon-cd"></span>
 </label>
 <label class="btn btn-default" ng-model="filterModel.hackerspace" tooltip-placement="bottom" tooltip="Hackerspaces" btn-checkbox>
-  <span class="glyphicon glyphicon-sunglasses"></span>
+  <span class="glyphicon icon-glider"></span>
 </label>
 </div>
