--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -8,25 +8,33 @@
     <link rel="stylesheet" href="css/vendor.css">
   </head>
   <body>
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand" href="/#!/">MateMonkey - αlpha</a>
-            <ul class="nav navbar-nav">
-              <li><a href="/#!/map">Map</a></li>
-              <li><a href="/#!/about">About</a></li>
-              <li><a href="/#!/legal">Legal</a></li>
-            </ul>
-
-          </div>
-        </div>
-      </nav>
-      <div ng-view id="container">
+    <nav class="navbar navbar-inverse navbar-fixed-top" ng-controller="NavBarController">
+      <div class="navbar-header">
+        <button class="navbar-toggle" type="button" ng-click="isCollapsed = !isCollapsed">
+          <span class="sr-only">Toggle Navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/#!/">MateMonkey - αlpha</a>
       </div>
+      <div id="mainNavBar" class="collapse nav-collapse navbar-responsive-collapse" collapse="isCollapsed">
+        <ul class="nav navbar-nav">
+          <li><a href="/#!/map">Map</a></li>
+          <li><a href="/#!/about">About</a></li>
+          <li><a href="/#!/legal">Legal</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div ng-view id="container">
+    </div>
   </body>
   <script src="js/vendor.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/navbar/controller.js"></script>
   <script src="js/map/controller.js"></script>
   <script src="js/dealer/controller.js"></script>
   <script src="js/filter/controller.js"></script>
+  <script src="js/about/controller.js"></script>
+  <script src="js/legal/controller.js"></script>
 </html>
