--- a/app/assets/js/dealer/view.html
+++ b/app/assets/js/dealer/view.html
@@ -23,24 +23,39 @@
   </address>
   <h4>Note</h4>
   <p>{{dealer.note}}</p>
-  <div>
+  <div style="margin-bottom: 15px">
     <div class="pull-right">
       <button class="btn btn-primary btn-sm" ng-click="showUpdateStock()">
         <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
         Update
       </button>
     </div>
+
     <h4>Stock</h4>
   </div>
   <div>
     <table class="table table-striped">
       <tr ng-repeat="entry in stock">
-        <td><b>{{entry.product.name}}</b></td>
-        <td><small>{{entry.price | cent2euro}} / {{entry.quantity | capfirst}}</small></td>
-        <td><span class="label label-{{entry.status}}">{{entry.status | capfirst}}</span></td>
-        <td><small>{{entry.created_at | date2 | relativeDate}}</small></td>
+        <td ng-if="entry.status != 'discontinued' || showDiscontinued == true"><b>{{entry.product.name}}</b></td>
+        <td ng-if="entry.status != 'discontinued' || showDiscontinued == true"><small>{{entry.price | cent2euro}} / {{entry.quantity | capfirst}}</small></td>
+        <td ng-if="entry.status != 'discontinued' || showDiscontinued == true"><span class="label label-{{entry.status}}">{{entry.status | capfirst}}</span></td>
+        <td ng-if="entry.status != 'discontinued' || showDiscontinued == true"><small>{{entry.created_at | date2 | relativeDate}}</small></td>
       </tr>
     </table>
   </div>
 
+  <div>
+    <label class="checkbox-inline">
+      <input type="checkbox" class="btn btn-primary btn-sm" ng-model="showDiscontinued" btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false">
+      Display Discontinued Products
+    </label>
+  </div>
+</div>
+<div>
+  <div class="pull-right" style="margin-top: 80px">
+    <button class="btn btn-success" ng-click="createNewDealer()">
+      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+        Create new Dealer
+      </button>
+  </div>
 </div>
