--- a/app/assets/js/map/view.html
+++ b/app/assets/js/map/view.html
@@ -1,5 +1,6 @@
-<div id="infobar">
+<div collapse="isCollapsed" id="infobar">
   <div ng-controller="FilterController" ng-include="'js/filter/view.html'"></div>
   <div ng-controller="DealerController" ng-include="'js/dealer/view.html'"></div>
 </div>
-<leaflet defaults="defaults" bounds="bounds" markers="markers" layers="layers" center="center" id="map"></leaflet>
+<leaflet defaults="defaults" bounds="bounds" markers="markers" layers="layers" center="center" id="map">
+</leaflet>
