--- a/app/assets/js/legal/view.html
+++ b/app/assets/js/legal/view.html
@@ -15,7 +15,7 @@ E-Mail: admin@matemonkey.com
 <p>
 I am not affliated with any producer or retailer listed on this
 website, I just enjoy drinking mate.<br>
-This is pure <b>non-profit</b> project.<br>
+This is a pure <b>non-profit</b> project.<br>
 If you want something removed, please contact me.
 </p>
 
