--- a/app/assets/js/map/view.html
+++ b/app/assets/js/map/view.html
@@ -1,4 +1,4 @@
-<div collapse="isCollapsed" id="infobar">
+<div id="infobar">
   <div ng-controller="FilterController" ng-include="'js/filter/view.html'"></div>
   <div ng-controller="DealerController" ng-include="'js/dealer/view.html'"></div>
 </div>
