Changed to asterisk
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/js/filter/view.html
+++ b/app/assets/js/filter/view.html
@@ -1,6 +1,6 @@
 <div class="btn-group" role="group">
 <label class="btn btn-default" ng-model="typeFilterModel.all" tooltip-placement="bottom" tooltip="Everything" btn-checkbox>
-  <span class="glyphicon glyphicon-star"></span>
+  <span class="glyphicon glyphicon-asterisk"></span>
 </label>
 <label class="btn btn-default" ng-model="typeFilterModel.retail" tooltip-placement="bottom" tooltip="Retail" btn-checkbox>
   <span class="glyphicon glyphicon-shopping-cart"></span>
