Added OpenStreetMap / MapQuest Attribution
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/js/legal/view.html
+++ b/app/assets/js/legal/view.html
@@ -19,6 +19,22 @@ This is a pure <b>non-profit</b> project.<br>
 If you want something removed, please contact me.
 </p>
 
+<h2>Attribution</h2>
+
+Original data provided by <a href="https://www.pascalj.de/">Pascal Jungblut</a>.
+
+<p>
+(1) This Application uses tiles that are courtesy of <a href="http://www.mapquest.com/" target="_blank">MapQuest</a> <img src="http://developer.mapquest.com/content/osm/mq_logo.png">
+</p>
+
+<p>
+(2) Nominatim Search Courtesy of <a href="http://www.mapquest.com/" target="_blank">MapQuest</a> <img src="http://developer.mapquest.com/content/osm/mq_logo.png">
+</p>
+
+Both services (1) and (2) use data provided by <a href="http://openstreetmap.org">OpenStreetMap</a>, © OpenStreetMap contributors.
+
+
+
 </div>
 
 
