added collapsable sidebar
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/js/map/view.html
+++ b/app/assets/js/map/view.html
@@ -1,6 +1,12 @@
-<div id="infobar">
+<div id="mapwrapper" ng-class="{'show-sidebar': showSidebar}">
+<div id="infobar" ng-class="{'show-sidebar': showSidebar}">
   <div ng-controller="FilterController" ng-include="'js/filter/view.html'"></div>
   <div ng-controller="DealerController" ng-include="'js/dealer/view.html'"></div>
 </div>
+<div id="infobar-slider" ng-click="showSidebar = !showSidebar">
+  <span style="top:50%" ng-if="!showSidebar" class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
+  <span style="top:50%" ng-if="showSidebar" class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
+</div>
 <leaflet defaults="defaults" bounds="bounds" markers="markers" layers="layers" center="center" id="map">
 </leaflet>
+</div>
