--- a/app/assets/js/map/view.html
+++ b/app/assets/js/map/view.html
@@ -3,7 +3,7 @@
   <div ng-controller="FilterController" ng-include="'js/filter/view.html'"></div>
   <div ng-controller="DealerController" ng-include="'js/dealer/view.html'"></div>
 </div>
-<div id="infobar-slider" ng-click="showSidebar = !showSidebar">
+<div id="infobar-slider" ng-click="showSidebar = !showSidebar" ng-class="{'show-sidebar': showSidebar}">
   <span style="top:50%" ng-if="!showSidebar" class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
   <span style="top:50%" ng-if="showSidebar" class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
 </div>
