Migrated to bootstrap, themed bootstrap
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/vendor.css">
   </head>
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top ng-scope" ng-controller="NavBarController">
+    <nav class="navbar navbar-default navbar-fixed-top ng-scope" ng-controller="NavBarController">
       <div class="navbar-header">
         <button class="navbar-toggle" type="button" ng-click="isCollapsed = !isCollapsed">
           <span class="sr-only">Toggle Navigation</span>
