--- a/app/assets/js/filter/view.html
+++ b/app/assets/js/filter/view.html
@@ -1,4 +1,4 @@
-<div class="btn-group" role="group">
+<div class="btn-group" role="group" style="margin-bottom: 5px">
 <label class="btn btn-default" ng-model="typeFilterModel.all" tooltip-placement="bottom" tooltip="Everything" btn-checkbox>
   <span class="glyphicon glyphicon-asterisk"></span>
 </label>
