--- a/app/assets/js/dealer/view.html
+++ b/app/assets/js/dealer/view.html
@@ -53,7 +53,7 @@
     </table>
   </div>
 
-  <div>
+  <div style="padding-bottom: 50px;">
     <label class="checkbox-inline">
       <input type="checkbox" class="btn btn-primary btn-sm" ng-model="showDiscontinued" btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false">
       Display Discontinued Products
