--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MateMonkey - αlpha</title>
+    <title>MateMonkey</title>
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/vendor.css">
   </head>
@@ -16,7 +16,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/#!/">MateMonkey - αlpha</a>
+        <a class="navbar-brand-img" href="/#!/">
+          <img alt="MateMonkey" src="css/images/matemonkey_logo_40x40.png"/>
+        </a>
+        <a class="navbar-brand" href="/#!/">
+          MateMonkey
+        </a>
+
         <div ng-if="isMap" class="navbar-left">
           <button class="btn btn-success navbar-btn navbar-left" type="button" tooltip-placement="bottom" tooltip="Create Dealer" ng-click="addDealer()">
             <span class="glyphicon glyphicon-plus-sign"></span>
