Enable HTML5 history mode for pretty URLs
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MateMonkey</title>
+    <base href="/">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/vendor.css">
   </head>
@@ -16,10 +17,10 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand-img" href="/#!/">
+        <a class="navbar-brand-img" href="/">
           <img alt="MateMonkey" src="css/images/matemonkey_logo_40x40.png"/>
         </a>
-        <a class="navbar-brand" href="/#!/">
+        <a class="navbar-brand" href="/">
           MateMonkey
         </a>
 
@@ -43,9 +44,9 @@
           </form>
         </div>
         <ul class="nav navbar-nav">
-          <li ng-if="!isMap"><a href="/#!/map">Map</a></li>
-          <li><a href="/#!/about">About</a></li>
-          <li><a href="/#!/legal">Legal</a></li>
+          <li ng-if="!isMap"><a href="/map">Map</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/legal">Legal</a></li>
         </ul>
       </div>
     </nav>
