--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Find (Yerba) Mate Dealers with MateMonkey near your location.">
     <title>MateMonkey</title>
     <base href="/">
     <link rel="stylesheet" href="css/app.css">
