Remove links to '/' from navbar
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -18,12 +18,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand-img" href="/">
+        <span class="navbar-brand-img">
           <img alt="MateMonkey" src="css/images/matemonkey_logo_40x40.png"/>
-        </a>
-        <a class="navbar-brand" href="/">
+        </span>
+        <span class="navbar-brand">
           MateMonkey
-        </a>
+        </span>
 
         <div ng-if="isMap" class="navbar-left">
           <button class="btn btn-success navbar-btn navbar-left" type="button" tooltip-placement="bottom" tooltip="Create Dealer" ng-click="addDealer()">
