Added changes to navbar \o/
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -46,6 +46,7 @@
         </div>
         <ul class="nav navbar-nav">
           <li ng-if="!isMap"><a href="/map">Map</a></li>
+          <li><a href="/changes">Changes</a></li>
           <li><a href="/about">About</a></li>
           <li><a href="/legal">Legal</a></li>
         </ul>
