upgraded to new versions (bootstrap/angular/leaflet)
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -26,12 +26,12 @@
         </span>
 
         <div ng-if="isMap" class="navbar-left">
-          <button class="btn btn-success navbar-btn navbar-left" type="button" tooltip-placement="bottom" tooltip="Create Dealer" ng-click="addDealer()">
+          <button class="btn btn-success navbar-btn navbar-left" type="button" tooltip-placement="bottom" uib-tooltip="Create Dealer" ng-click="addDealer()">
             <span class="glyphicon glyphicon-plus-sign"></span>
           </button>
         </div>
       </div>
-      <div id="mainNavBar" class="collapse nav-collapse navbar-responsive-collapse" collapse="isCollapsed">
+      <div id="mainNavBar" class="nav-collapse navbar-responsive-collapse" uib-collapse="isCollapsed">
         <div ng-if="isMap" class="navbar-left">
           <form class="navbar-form navbar-left" role="search">
             <div class="input-group">
