I am SEO, bitch part II
- unique title for each page (incl. dealer pages)
- unique meta description for each page

Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Find (Yerba) Mate Dealers with MateMonkey near your location.">
-    <title>MateMonkey</title>
+    <meta name="description" content="{{pageDescription}}">
+    <title>MateMonkey - {{title}}</title>
     <base href="/">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/app.css">
