added FontAwesome. Site is a bit more responsive now
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -27,9 +27,10 @@
 
         <div ng-if="isMap" class="navbar-left">
           <button class="btn btn-success navbar-btn navbar-left" type="button" tooltip-placement="bottom" uib-tooltip="Create Dealer" ng-click="addDealer()">
-            <span class="glyphicon glyphicon-plus-sign"></span>
+            <span class="fa fa-plus"></span> <span class="add-button-label">Dealer</span>
           </button>
         </div>
+
       </div>
       <div id="mainNavBar" class="nav-collapse navbar-responsive-collapse" uib-collapse="isCollapsed">
         <div ng-if="isMap" class="navbar-left">
@@ -49,6 +50,8 @@
           <li><a href="/changes">Changes</a></li>
           <li><a href="/about">About</a></li>
           <li><a href="/legal">Legal</a></li>
+          <li><a href="https://twitter.com/matemonkeycom"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="https://github.com/MateMonkey"><i class="fa fa-github"></i></a></li>
         </ul>
       </div>
     </nav>
