Open twitter/github links in new tab
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -50,8 +50,8 @@
           <li><a href="/changes">Changes</a></li>
           <li><a href="/about">About</a></li>
           <li><a href="/legal">Legal</a></li>
-          <li><a href="https://twitter.com/matemonkeycom"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="https://github.com/MateMonkey"><i class="fa fa-github"></i></a></li>
+          <li><a href="https://twitter.com/matemonkeycom" target="_blank"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="https://github.com/MateMonkey" target="_blank"><i class="fa fa-github"></i></a></li>
         </ul>
       </div>
     </nav>
