added "Links" page, added background image
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -49,6 +49,7 @@
           <li ng-if="!isMap"><a href="/map">Map</a></li>
           <li><a href="/changes">Changes</a></li>
           <li><a href="/about">About</a></li>
+          <li><a href="/links">Links</a></li>
           <li><a href="/legal">Legal</a></li>
           <li><a href="https://twitter.com/matemonkeycom" target="_blank"><i class="fa fa-twitter"></i></a></li>
           <li><a href="https://github.com/MateMonkey" target="_blank"><i class="fa fa-github"></i></a></li>
