--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{pageDescription}}">
+    <meta name="apple-itunes-app" content="app-id=1202602103, app-argument={{fullURL()}}">
     <title>MateMonkey - {{title}}</title>
     <base href="/">
     <link rel="stylesheet" href="css/vendor.css">
